Fix bug HTTP 500, Nguyên nhân chính: code đang dùng String.isBlank(), Tomcat hiện tại không hỗ trợ method này nên SecurityFilter bị lỗi ngay khi request đi qua filter